--- a/src/components/modals/focus_publication_modal.css
+++ b/src/components/modals/focus_publication_modal.css
@@ -19,7 +19,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    
+
     margin: auto;
     justify-content: center;
     align-items: center;
@@ -28,12 +28,19 @@
     height: 500px;
     
 }
+.focus-modal-icon-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
 
 .focus-modal-row {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    height: 100%;
 }
 
 .image-title-column {
