--- a/src/components/modals/focus_publication_modal.css
+++ b/src/components/modals/focus_publication_modal.css
@@ -32,7 +32,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: 500px;
+    width: auto;
+}
+.focus-modal-image-container{
+    height: 500px;
+    width: 500px;
 }
 
 .focus-modal-row {
