Improve text style and Focus modal overflow

--- a/src/components/dropdown_filter/index.css
+++ b/src/components/dropdown_filter/index.css
@@ -77,7 +77,7 @@
     background-color: #631414;
 }
 .custom-option.selected {
-    color: #ffffff;
+    color: white;
     background-color: #305c91;
 }
 
