--- a/src/components/modals/focus_publication_modal.css
+++ b/src/components/modals/focus_publication_modal.css
@@ -1,6 +1,6 @@
 .focus-modal-wrapper {
     color: black;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 1050;
     width: 100%;
@@ -19,7 +19,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-
+    
     margin: auto;
     justify-content: center;
     align-items: center;
@@ -32,12 +32,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 500px;
+    height: 560px;
     width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .focus-modal-image-container{
+    
     height: 500px;
-    width: 500px;
+    width: 700px;
+    overflow: hidden;
+    
 }
 
 .focus-modal-row {
