--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,8 @@ h1 {
 
 .photographer_section article h2 {
   color: #D3573C;
-  font-size: 36px;
+  font-size: 40px;
+  margin:10px;
 }
 
 .photographer_section article img {
