Add padding to like counter

--- a/src/components/like_counter/index.css
+++ b/src/components/like_counter/index.css
@@ -15,6 +15,9 @@
     display: flex;
     align-items: center;
 }
+.like-display-counter-number{
+    margin-right: 3px;
+}
 
 .like-display-price{
     
